--- a/index.html
+++ b/index.html
@@ -6,31 +6,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>World Liberty Financial</title>
   <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
 </head>
 
-<body>
+<body style="background-color: var(--dark-brown);">
 
   <!-- HEADER SECTION -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark-brown">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="assets/image/logo.1adc9ebd.svg" alt="">
+        <img src="assets/image/logo.1adc9ebd.svg" alt="Logo">
       </a>
       <button
-       class="navbar-toggler"
-       type="button"
-       data-bs-toggle="collapse"
-       data-bs-target="#navbarNavDropdown"
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown"
         aria-expanded="false"
         aria-label="Toggle navigation"
-        >
+      >
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link active" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">SignUp</a>
@@ -43,19 +44,18 @@
     </div>
   </nav>
 
-
   <!-- Header banner -->
   <section class="container mt-1">
     <div class="row col-md-12 border-1 border shadow-sm p-4">
-
+      <!-- Content here -->
     </div>
   </section>
 
+  <!-- SCRIPTS -->
+  <script src="assets/js/jquery.js"></script>
+  <script src="assets/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/js/app.js"></script>
+  <script src="assets/js/popup.js"></script>
 </body>
-<script src="assets/js/app.js"></script>
-<script src="assets/js/bootstrap.bundle.min.js"></script>
-<script src="assets/js/bootstrap.min.js"></script>
-<script src="assets/js/jquery.js"></script>
-<script src="assets/js/popup.js"></script>
 
 </html>
